# learning-agency-lab-automated-essay-scoring-2

./: README.md  pyproject.toml
notebooks/: logistic_regression.ipynb
src/learning_agency_lab_automated_essay_scoring_2/: logistic_regression.jupyter.py
