[project]
name = "learning-agency-lab-automated-essay-scoring-2"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "ipykernel>=6.29.4",
    "kaggle>=1.6.14",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/learning_agency_lab_automated_essay_scoring_2"]
